force-app/main/default/objects/Exploitation__c/Exploitation__c.object-meta.xml
<CustomObject>
    <label>Exploitation</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Exploitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exploitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>