force-app/main/default/objects/Exploitation__c/fields/Frais__c.field-meta.xml
<CustomField>
    <fullName>Frais__c</fullName>
    <label>Frais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>