force-app/main/default/objects/Exploitation__c/fields/Frais_Locaux__c.field-meta.xml
<CustomField>
    <fullName>Frais_Locaux__c</fullName>
    <label>Frais Locaux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>