force-app/main/default/objects/Exploitation__c/fields/Nombre_de_colis__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_colis__c</fullName>
    <label>Nombre de colis</label>
    <length>25</length>
    <type>Text</type>
</CustomField>