force-app/main/default/objects/Exploitation__c/fields/Poids_kg__c.field-meta.xml
<CustomField>
    <fullName>Poids_kg__c</fullName>
    <label>Poids (kg)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>